  Added all corresponding .cpp file with skeleton. Effective file parsing method still needed to be implemented for each .def. TinNS should complile and run however, with only a bunch of .def loading error at server start (but that's not blocking)


Hammag; 11.04.2009 23:40 GMT+1
----------
[rev. 112-113]

<Gameserver>
  Implemented support for more .def files
  Moved random number generation methods out of PGameServer to global functions in common/misc
  Content of item boxes, trashcans, bags, etc. is now based on .def files. Cabinet content is kept as before, i.e generating fully random items.
  
Hammag; 18.04.2009 19:10 GMT+1
----------
[rev. 114-119]

<Gameserver>
  Implemented multi-char vhc support:
    - vhc should now be seen the right way (good pos, good direction) by all present chars
    - Access to spawned vhc requires owner autorization [This is still bugging for some part though]
  Fixed various small things
  Tried an implementation of Jumping (in order to have jumps seen by other chars) [Not tested at all]
  
  As these various things require at least 2 simultaneous connexions, and as I can't easily do that atm, it has not been fully tested.
  
  Warning: my server crashed while I was away with 2 chars connected. I didn't search for the reason, so don't let your server running on an Internet accessible host when you're away.

Hammag; 18.04.2009 20:00 GMT+1
----------
[rev. 120]

<Gameserver>
  Fixed and added bug in handling deconnection of seating char that was causing the crash mentinned in the previous rev.

Hammag; 28.04.2009 13:30 GMT+1
----------
[rev. 121-122]

<Gameserver>
  Fixed many little accessory things, potential bugs and discrepencies
  Cleaned up source code format in some files
  Deactivated as most debug output when dev_debug is not set in conf file (but setting it will generate lots of output !)
  Continued work on vhc. Some small fixes and multichar tests still need to be performed
